--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+fastparquet==2023.2.0
 numpy==1.24.2
 openpyxl==3.1.1
 pandas==1.5.3
 plotly==5.13.1
 PyPDF2==3.0.1
+pyxlsb==1.0.10
 streamlit==1.19.0
 thefuzz==0.19.0
